moved around and add vcpkg_root variable

--- a/Pagmo4EPANET_CMake/src/CMakeLists.txt
+++ b/Pagmo4EPANET_CMake/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+set( EPANET_ROOT "$ENV{EPANET_ROOT}" CACHE FILEPATH "Path to the rootfolder to EPANET")
+
 IF(WIN32)
 	add_library(epanet SHARED IMPORTED )
 	set_property(TARGET epanet PROPERTY
