--- a/Pagmo4EPANET_CMake/src/CMakeLists.txt
+++ b/Pagmo4EPANET_CMake/src/CMakeLists.txt
@@ -1,17 +1,27 @@
-set( EPANET_ROOT "$ENV{EPANET_ROOT}" CACHE FILEPATH "Path to the rootfolder to EPANET")
+#Set the path to the EPANET folder and library
+#The path to the folder can be set in 2 ways:
+#     1. pass a flag at the first cmake invocation
+#         `cmake .. -DEPANET_ROOT=/path/to/EPANET`
+#     3. set the enviromental variable EPANET_ROOT = /path/to/EPANET // see how to do it base on your OS
+#         `cmake ..` 
+
+set( EPANET_ROOT "$ENV{EPANET_ROOT}" CACHE PATH "Path to the rootfolder to EPANET")
 
 IF(WIN32)
 	add_library(epanet SHARED IMPORTED )
-	set_property(TARGET epanet PROPERTY
-	            IMPORTED_LOCATION "${EPANET_ROOT}/build/bin/Release/epanet2.dll")
-	set_property(TARGET epanet PROPERTY
-		        IMPORTED_IMPLIB "${EPANET_ROOT}/build/lib/Release/epanet2.lib")
+	set_target_properties(epanet PROPERTIES
+	            IMPORTED_LOCATION "${EPANET_ROOT}/build/bin/Release/epanet2.dll"
+#	            )
+#	set_property(TARGET epanet PROPERTY
+		        IMPORTED_IMPLIB "${EPANET_ROOT}/build/lib/Release/epanet2.lib"
+		        )
 ENDIF(WIN32)
 
 IF(APPLE)
 	add_library(epanet SHARED IMPORTED)
 	set_target_properties(epanet PROPERTIES
-						 IMPORTED_LOCATION "${EPANET_ROOT}/build/lib/libepanet2.dylib" )
+						 IMPORTED_LOCATION "${EPANET_ROOT}/build/lib/libepanet2.dylib" 
+						 )
 ENDIF(APPLE)
 
 add_library(Stuff "logger.cpp" "NET1.cpp")
